# discord-stats

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
ci/: azure-build-template.yml
src/: api.rs  error.rs  event_handler.rs  main.rs  scan.rs  store.rs
web/: .gitignore  package.json
web/src/: index.html  index.js
