[package]
name = "discord-statistics"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.17.0"
actix-web = "1.0.0-alpha.6"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

[dependencies.serenity]
git = "https://github.com/terminal-discord/serenity"
branch = "current"
default_features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "http",
]
