[package]
name = "discord-statistics"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.19.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.40"
iron = "0.6.0"
router = "0.6.0"
persistent = "0.4.0"
toml = "0.5.0"
clap = "2.33.0"
dirs = "2.0.1"
chrono = "0.4.6"
indicatif = "0.11.0"

[dependencies.serenity]
git = "https://github.com/terminal-discord/serenity"
branch = "current"
default_features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]
